# qudas

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-ci.yml
benchmarks/tsp/: TSP_result.csv  benchmark_amplify.py  benchmark_pyqubo.py  requirements.txt  utils.py
docs/: .buildinfo  genindex.html  index.html  quickstart.html  references.html  search.html
docs/_modules/: index.html
docs/pipeline/: index.html
docs/qudata/: base.html  index.html  input.html  main.html  output.html
docs/source/: cli.rst  conf.py  index.rst  modules.rst  qudas.rst  quickstart.rst
docs/v0.1/: objects.inv
docs/v0.2/: objects.inv  searchindex.js
examples/: fmqa.py
examples/fmqa/: .env.example  anneal_fmqa.py  main.py  pipe_iteration.py  torch_fmqa.py  utils.py
examples/qsvm-gate/: main.py  utils.py
qudas/: __init__.py  __main__.py  base.py  cli.py  convert.py  converter.py  pipeline.py  qudata.py
qudas/annealing/: __init__.py  block.py  executor.py  input.py  ir.py  output.py
qudas/core/: __init__.py  base.py  executor_base.py  input_base.py  output_base.py
qudas/gate/: __init__.py  block.py  executor.py  gate_ir.py  input.py  ir.py  output.py
qudas/pipeline/: __init__.py  pipeline.py
test/: fmqa.py  pipe.html  test_annealing.py  test_annealing_executor.py  test_convert.py  test_converter.py  test_fmqa.py  test_fmqa_no_iteration_class.py  test_gate_executor.py  test_new_version.py  test_pipeline.py  test_qudata.py  test_qudata_input.py  test_qudata_output.py  to-csv.csv  to-json.json
(+39 files in other folders)
