[project]
name = "qudas"
authors = [
  { name="Keiichiro Higa", email="higa.devel@gmail.com" },
]
description = "Quantum data transform package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''